--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
-
-/* @import url("https://fonts.googleapis.com/css2?family=Sora&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sora&display=swap");
 
 * {
   font-family: "Sora", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-} */
-
+}
+/*
 .App {
   display: flex;
   justify-content: center;
@@ -26,7 +25,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: "15cdfc";
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -47,4 +46,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
