--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 /* @import url("https://fonts.googleapis.com/css2?family=Sora&display=swap");
 
 * {
@@ -7,7 +6,7 @@
   margin: 0;
   padding: 0;
 } */
-
+/*
 .App {
   display: flex;
   justify-content: center;
@@ -47,4 +46,8 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.img {
+  z-index: 50;
 }
