--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
   padding: 0;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1em;
+}
+
 .App {
   display: flex;
   flex-direction: column;
